# rt_indi

./: .gitignore  .travis.yml  2  3  4  CMakeLists.txt  Makefile  Makefile.inc  README.md  help
.github/workflows/: c-cpp.yml
includes/: kernel.h  rt.h  rt_jtoc.h  stb_image.h
json/: all_obj_with_texture.json  ash.json  ash_2.json  bad_fantasy.json  cone.json  glass.json  glass_planes.json  lemps.json  lens.json  mandelbulb.json  map1.json  map2.json  map3.json  map4.json  mouse.json  spheres.json  stained_glass.json  student_hostel.json  test.json  test_map.json  textures.json  trash.json
json/4_spheres_1/: map.json
json/4_spheres_2/: map.json  textures.json
json/all_obj/: map.json
json/all_obj_with_texture/: map.json  textures.json
json/bad_fantasy/: map.json  textures.json
json/beautiful_scene/: beautiful.json  beautiful_texture.json  map.json  map_pyramid.json  pyramid_of_spheres.json  texture.json
json/glass/: map.json
json/glass_planes/: map.json  textures.json
json/lemps/: map.json  textures.json
json/lens/: map.json  textures.json
json/mandelbulb/: map.json
json/nice_scene/: nice.json
json/spheres/: map.json  textures.json
json/stained_glass/: map.json
json/student_hostel/: map.json  textures.json
libcl/: CMakeLists.txt  Makefile
libcl/include/: libcl.h
libcl/src/: CMakeLists.txt  cl_create_program.c  cl_init.c  cl_kernels.c  cl_setup.c  cl_utilits.c
libft/: Makefile
libft/includes/: get_next_line.h  libft.h
libft/srcs/: ft_abs.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstpush.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  (+23 more)
libjtoc/: Makefile
libjtoc/include/: libjtoc.h
libjtoc/src/: jtoc_get.c  jtoc_get_raw_data.c  jtoc_get_raw_data_help.c  jtoc_node.c  jtoc_parse.c  jtoc_parse_number.c  jtoc_parse_value.c  jtoc_read.c  jtoc_read_file.c  jtoc_utils.c  jtoc_utils2.c  jtoc_validate.c  jtoc_validate_value.c  jtoc_write.c  jtoc_write_help.c
maps/: 1  bad  balls  balls2  hyper  plane  plane.json
scls/: path_trace_render.cl  phong_render.cl  post_processing.cl  rt.cl  scene_intersect.cl  utilities.cl  uv_mapping.cl
srcs/: cam_and_screen.c  check_key_0.c  check_key_1.c  check_key_2.c  check_mouse_0.c  check_mouse_1.c  figures.c  float3_0.c  float3_1.c  get_textures.c  gpu_mem.c  kernel.c  main.c  release_gpu_mem.c
srcs/rt_jtoc/: CMakeLists.txt  rt_jtoc_get_basic_obj.c  rt_jtoc_get_camera.c  rt_jtoc_get_effects.c  rt_jtoc_get_extraordinary_obj.c  rt_jtoc_get_lights.c  rt_jtoc_get_object_params.c  rt_jtoc_get_objects.c  rt_jtoc_get_objects_params.c  rt_jtoc_get_refl.c  rt_jtoc_get_textures.c  rt_jtoc_mouse_setup.c  rt_jtoc_scene_setup.c  rt_jtoc_utilits.c
