cmake_minimum_required(VERSION 3.14)
project(rt_indi C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)
include_directories(libjtoc/include)

add_executable(rt_indi
        includes/kernel.h
        includes/rt.h
        includes/rt_jtoc.h
        includes/stb_image.h
        includes/stb_image_write.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/srcs/ft_abs.c
        libft/srcs/ft_atoi.c
        libft/srcs/ft_bzero.c
        libft/srcs/ft_isalnum.c
        libft/srcs/ft_isalpha.c
        libft/srcs/ft_isascii.c
        libft/srcs/ft_isdigit.c
        libft/srcs/ft_isprint.c
        libft/srcs/ft_itoa.c
        libft/srcs/ft_lstadd.c
        libft/srcs/ft_lstdel.c
        libft/srcs/ft_lstdelone.c
        libft/srcs/ft_lstiter.c
        libft/srcs/ft_lstmap.c
        libft/srcs/ft_lstnew.c
        libft/srcs/ft_lstpush.c
        libft/srcs/ft_memalloc.c
        libft/srcs/ft_memccpy.c
        libft/srcs/ft_memchr.c
        libft/srcs/ft_memcmp.c
        libft/srcs/ft_memcpy.c
        libft/srcs/ft_memdel.c
        libft/srcs/ft_memmove.c
        libft/srcs/ft_memset.c
        libft/srcs/ft_putchar.c
        libft/srcs/ft_putchar_fd.c
        libft/srcs/ft_putendl.c
        libft/srcs/ft_putendl_fd.c
        libft/srcs/ft_putnbr.c
        libft/srcs/ft_putnbr_fd.c
        libft/srcs/ft_putstr.c
        libft/srcs/ft_putstr_fd.c
        libft/srcs/ft_strcat.c
        libft/srcs/ft_strchr.c
        libft/srcs/ft_strclr.c
        libft/srcs/ft_strcmp.c
        libft/srcs/ft_strcpy.c
        libft/srcs/ft_strdel.c
        libft/srcs/ft_strdup.c
        libft/srcs/ft_strequ.c
        libft/srcs/ft_striter.c
        libft/srcs/ft_striteri.c
        libft/srcs/ft_strjoin.c
        libft/srcs/ft_strlcat.c
        libft/srcs/ft_strlen.c
        libft/srcs/ft_strmap.c
        libft/srcs/ft_strmapi.c
        libft/srcs/ft_strncat.c
        libft/srcs/ft_strncmp.c
        libft/srcs/ft_strncpy.c
        libft/srcs/ft_strnequ.c
        libft/srcs/ft_strnew.c
        libft/srcs/ft_strnstr.c
        libft/srcs/ft_strrchr.c
        libft/srcs/ft_strsplit.c
        libft/srcs/ft_strstr.c
        libft/srcs/ft_strsub.c
        libft/srcs/ft_strtrim.c
        libft/srcs/ft_tolower.c
        libft/srcs/ft_toupper.c
        libft/srcs/get_next_line.c
        libft/srcs/getnbr.c
        libjtoc/include/libjtoc.h
        libjtoc/src/jtoc_get.c
        libjtoc/src/jtoc_get_raw_data.c
        libjtoc/src/jtoc_node.c
        libjtoc/src/jtoc_parse.c
        libjtoc/src/jtoc_parse_number.c
        libjtoc/src/jtoc_parse_value.c
        libjtoc/src/jtoc_read.c
        libjtoc/src/jtoc_read_file.c
        libjtoc/src/jtoc_utils.c
        libjtoc/src/jtoc_utils2.c
        libjtoc/src/jtoc_validate.c
        libjtoc/src/jtoc_validate_value.c
        libjtoc/src/jtoc_write.c
        srcs/rt_jtoc/rt_jtoc_get_camera.c
        srcs/rt_jtoc/rt_jtoc_get_objects.c
        srcs/rt_jtoc/rt_jtoc_get_objects_params.c
        srcs/rt_jtoc/rt_jtoc_get_textures.c
        srcs/rt_jtoc/rt_jtoc_scene_setup.c
        srcs/rt_jtoc/rt_jtoc_utilits.c
        srcs/cam_and_screen.c
        srcs/check_key_0.c
        srcs/check_key_1.c
        srcs/check_mouse_0.c
        srcs/check_mouse_1.c
        srcs/figures.c
        srcs/float3_0.c
        srcs/float3_1.c
        srcs/get_textures.c
        srcs/kernel.c
        srcs/main.c)
